operator/pkg/gateway-api/testdata/gateway/httproute-invalid-parentref-section-name-not-matching-port/output/httproute-httproute-listener-section-name-not-matching-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-listener-section-name-not-matching-port
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-with-one-not-matching-port-and-section-name-route
      namespace: gateway-conformance-infra
      sectionName: http
      # mismatched port value here (81 does not match gateway http listener's port) triggers NoMatchingParent reason
      port: 81
  rules:
    - backendRefs:
        - name: infra-backend-v1
          kind: Service
          port: 8080
