operator/pkg/gateway-api/testdata/gateway/httproute-invalid-parentref-section-name-not-matching-port/output/httproute-invalid-parentref-section-name-not-matching-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-listener-section-name-not-matching-port
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-with-one-not-matching-port-and-section-name-route
      namespace: gateway-conformance-infra
      sectionName: http
      # mismatched port value here (81 does not match gateway http listener's port) triggers NoMatchingParent reason
      port: 81
  rules:
    - backendRefs:
        - name: infra-backend-v1
          kind: Service
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T14:19:43Z"
          message: No matching listener with sectionName http1
          reason: NoMatchingParent
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:19:43Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: same-namespace
        namespace: gateway-conformance-infra
        port: 80
        sectionName: http1
